# simple-notes

./: .gitignore  CLAUDE.md  PRD.md  README.md  README_zh.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: NotePanel.tsx  SettingsDialog.tsx
src/services/: gist.ts
src/styles/: globals.css
